Products and categories detail

--- a/ecomapp/templates/ecomapp/index.html
+++ b/ecomapp/templates/ecomapp/index.html
@@ -6,7 +6,17 @@
 
 {% block main %}
     {% for category in categories %}
-     <h1>{{ category.name }}</h1>
+{#        <h1><a href="{{ category.get_absolute }}">{{ category.name }}</a></h1>#}
+{#        <h1><a href="{% url 'category_detail.get_absolute' %}">{{ category.name }}</a></h1>#}
+        <h1><a href="#">{{ category.name }}</a></h1>
+        {% for product in products %}
+            {% if product.category == category %}
+                <div>
+                    <h3><a href="#">{{ product.title }}</a></h3>
+                    <img src="{{ product.image.url }}" alt="" style="width:200px">
+                </div>
+            {% endif %}
+        {% endfor %}
     {% endfor %}
 {% endblock %}
 
