--- a/ecomapp/templates/ecomapp/category.html
+++ b/ecomapp/templates/ecomapp/category.html
@@ -1,1 +1,18 @@
 {% extends 'base.html' %}
+
+{% block title %}
+
+{% endblock %}
+
+{% block main %}
+    <h2>{{ category.name }}</h2>
+
+    {% for product in products %}
+        <h2>{{ product.title }}</h2>
+        <h4><a href="{% url 'ecomapp:product_detail' product.slug %}">{{ product.title }}</a></h4>
+    {% endfor %}
+{% endblock %}
+
+{% block sidebar %}
+
+{% endblock %}
