--- a/ecomapp/templates/ecomapp/product.html
+++ b/ecomapp/templates/ecomapp/product.html
@@ -1,1 +1,14 @@
 {% extends 'base.html' %}
+
+{% block title %}
+
+{% endblock %}
+
+{% block main %}
+    <h2>{{ product.title }}</h2>
+    <img src="{{ product.image.url }}" alt="" style="width:200px">
+{% endblock %}
+
+{% block sidebar %}
+
+{% endblock %}
