--- a/ecomapp/templates/ecomapp/index.html
+++ b/ecomapp/templates/ecomapp/index.html
@@ -8,7 +8,7 @@
     <div>
         <ul>
             <li>
-                <a href="{% url 'ecomapp:cart' %}">Корзина <span>{{ cart.item.qty }}</span></a>
+                <a href="{% url 'ecomapp:cart' %}">Корзина <span>{{ cart.item.count }}</span></a>
             </li>
         </ul>
     </div>
