function add and remove in model

--- a/ecomapp/templates/ecomapp/cart.html
+++ b/ecomapp/templates/ecomapp/cart.html
@@ -12,6 +12,10 @@
         <a href='{% url "ecomapp:remove_from_cart" product_slug=item.product.slug %}'><button>Удалить</button></a>
     {% endfor %}
 
+    <script>
+        alert("hi")
+    </script>
+
 {% endblock %}
 
 {% block sidebar %}
