--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/media/style.css">
     <title>{% block title %}My title{% endblock %}</title>
 </head>
 <body>
+
+<header>
+    <div class="logo">
+        <a href="index.html"><img class="graficlogo" src="img/logoTrans.png" alt="Logo"></a>
+    </div>
+    <nav>
+        <div class="topnav" id="myTopnav">
+            <a href="index.html">Главная</a>
+            <a href="#equipment">Оборудование</a>
+            <a href="#logistic">Логистика</a>
+            <a href="#service">Дополнительные услуги</a>
+            <a href="#contact">Контакты</a>
+            <a id="menu" href="#" class="icon">&#9776;</a>
+        </div>
+    </nav>
+</header>
+
 <h1><a href="{% url 'ecomapp:base' %}">Home</a></h1>
 <div>{% block main %}Main{% endblock %}</div>
 <div>{% block sidebar %}Sidebar{% endblock %}</div>
