--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -36,7 +36,7 @@
 
     <br>
 
-    <a href='{% url 'ecomapp:create_order' %}'><button>Оформить заказ</button></a>
+    <a href='{% url 'shop:create_order' %}'><button>Оформить заказ</button></a>
 
 {% endblock %}
 
