--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -8,16 +8,16 @@
     <div>
         <ul>
             <li>
-                <a href="{% url 'ecomapp:cart' %}">Корзина <span>{{ cart.item.count }}</span></a>
+                <a href="{% url 'shop:cart' %}">Корзина <span>{{ cart.item.count }}</span></a>
             </li>
         </ul>
     </div>
     {% for category in categories %}
-        <h1><a href="{% url 'ecomapp:category_detail' category.slug %}">{{ category.name }}</a></h1>
+        <h1><a href="{% url 'shop:category_detail' category.slug %}">{{ category.name }}</a></h1>
         {% for product in products %}
             {% if product.category == category %}
                 <div>
-                    <h3><a href="{% url 'ecomapp:product_detail' product.slug %}">{{ product.title }}</a></h3>
+                    <h3><a href="{% url 'shop:product_detail' product.slug %}">{{ product.title }}</a></h3>
                     <img src="{{ product.image.url }}" alt="" style="width:200px">
                 </div>
             {% endif %}
