--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/media/style.css">
+{#    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>{% block title %}My title{% endblock %}</title>
 </head>
 <body>
-
-<header>
-    <div class="logo">
-        <a href="index.html"><img class="graficlogo" src="img/logoTrans.png" alt="Logo"></a>
-    </div>
-    <nav>
-        <div class="topnav" id="myTopnav">
-            <a href="index.html">Главная</a>
-            <a href="#equipment">Оборудование</a>
-            <a href="#logistic">Логистика</a>
-            <a href="#service">Дополнительные услуги</a>
-            <a href="#contact">Контакты</a>
-            <a id="menu" href="#" class="icon">&#9776;</a>
-        </div>
-    </nav>
-</header>
-
-<h1><a href="{% url 'ecomapp:base' %}">Home</a></h1>
+<h1><a href="{% url 'shop:base' %}">Home</a></h1>
 <div>{% block main %}Main{% endblock %}</div>
 <div>{% block sidebar %}Sidebar{% endblock %}</div>
 <div>{% block footer %}
@@ -36,5 +25,8 @@
     </div>
 {% endblock %}
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
