--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -4,6 +4,15 @@
 {% block title %}
 {% endblock %}
 
+{% block cart %}
+    <div class="qty">{{ cart.item.count }}</div>
+{% endblock %}
+
+{% block breadcrumb %}
+{#    <div class="qty">{{ product.category.slug }} / {{ product.slug }}</div>#}
+    <li><a href="#">Заказ</a></li>
+{% endblock %}
+
 {% block main %}
     <form action="" method="post"></form>
     <div>{{ form.name.label }}: {{ form.name }} {{ form.last_name.label }}: {{ form.last_name }}</div>
