--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -4,6 +4,16 @@
 
 {% endblock %}
 
+{% block cart %}
+    <div class="qty">{{ cart.item.count }}</div>
+{% endblock %}
+
+{% block breadcrumb %}
+{#    <div class="qty">{{ product.category.slug }} / {{ product.slug }}</div>#}
+    <li><a href="../category/{{ product.category.slug }}">{{ product.category }}</a></li>
+    <li><a href={{ product.slug }}>{{ product.title }}</a></li>
+{% endblock %}
+
 {% block main %}
     <h2>{{ product.title }}</h2>
     <img src="{{ product.image.url }}" alt="" style="width:200px">
