--- a/static/css/slick-theme.css
+++ b/static/css/slick-theme.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 /* Slider */
 .slick-loading .slick-list
 {
@@ -12,8 +12,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
+    src: url('/static/fonts/slick.eot');
+    src: url('/static/fonts/slick.eot?#iefix') format('embedded-opentype'), url('/static/fonts/slick.woff') format('woff'), url('/static/fonts/slick.ttf') format('truetype'), url('/static/fonts/slick.svg#slick') format('svg');
 }
 /* Arrows */
 .slick-prev,
