--- a/templates/base.html
+++ b/templates/base.html
@@ -2,31 +2,336 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-{#    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<title>Большой теннис</title>
 
-    <title>{% block title %}My title{% endblock %}</title>
-</head>
-<body>
-<h1><a href="{% url 'shop:base' %}">Home</a></h1>
-<div>{% block main %}Main{% endblock %}</div>
-<div>{% block sidebar %}Sidebar{% endblock %}</div>
-<div>{% block footer %}
-    <div>
-        {% if not request.get_full_path == '/' %}   {# проверка на главную страницу #}
-            <h3>Это не главная страница</h3>
-        {% else %}
-            <h3>Это главная страница</h3>
-        {% endif %}
-    </div>
-{% endblock %}
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+ 		<!-- Google font -->
+ 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+
+ 		<!-- Bootstrap -->
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+
+ 		<!-- Slick -->
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}"/>
+ 		<link type="text/css" rel="stylesheet" href="/static/css/slick-theme.css"/>
+
+ 		<!-- nouislider -->
+ 		<link type="text/css" rel="stylesheet" href="/static/css/nouislider.min.css"/>
+
+ 		<!-- Font Awesome Icon -->
+ 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+{#        <link rel="stylesheet" href="{% static 'css/style_test.css' %}"/>#}
+
+ 		<!-- Custom stlylesheet -->
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
+
+ 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+ 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+ 		<!--[if lt IE 9]>
+ 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+ 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+ 		<![endif]-->
+
+    </head>
+	<body>
+		<!-- HEADER -->
+		<header>
+			<!-- TOP HEADER -->
+			<div id="top-header">
+				<div class="container">
+					<ul class="header-links pull-left">
+						<li><a href="{% url 'shop:contact' %}"><i class="fa fa-phone"></i> +7 (999) 765-43-21</a></li>
+						<li><a href="{% url 'shop:contact' %}"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
+						<li><a href="{% url 'shop:contact' %}"><i class="fa fa-map-marker"></i> г. Москва, ул. Первого Мая, д.16</a></li>
+					</ul>
+					<ul class="header-links pull-right">
+						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+					</ul>
+				</div>
+			</div>
+			<!-- /TOP HEADER -->
+
+			<!-- MAIN HEADER -->
+			<div id="header">
+				<!-- container -->
+				<div class="container">
+					<!-- row -->
+					<div class="row">
+						<!-- LOGO -->
+						<div class="col-md-3">
+							<div class="header-logo">
+								<a href="#" class="logo">
+									<img src="/static/img/logo.png" alt="">
+								</a>
+							</div>
+						</div>
+						<!-- /LOGO -->
+
+						<!-- SEARCH BAR -->
+						<div class="col-md-6">
+							<div class="header-search">
+								<form>
+                                    <select class="input-select">
+                                        <option value="0">Все разделы</option>
+                                        {% for category in categories %}
+                                            <option value="{{ category.slug }}">{{ category.name }}</option>
+                                        {% endfor %}
+                                    <input class="input" placeholder="Поиск">
+                                    <button class="search-btn">Search</button>
+								</form>
+							</div>
+						</div>
+						<!-- /SEARCH BAR -->
+
+						<!-- ACCOUNT -->
+						<div class="col-md-3 clearfix">
+							<div class="header-ctn">
+								<!-- Cart -->
+								<div>
+									<a href="#">
+										<i class="fa fa-shopping-cart"></i>
+										<span>Корзина</span>
+{#										{% block cart %}0{% endblock %}#}
+                                        <div class="qty">{{ cart.item.count }}</div>
+									</a>
+								</div>
+								<!-- /Cart -->
+
+								<!-- Menu Toogle -->
+								<div class="menu-toggle">
+									<a href="#">
+										<i class="fa fa-bars"></i>
+										<span>Menu</span>
+									</a>
+								</div>
+								<!-- /Menu Toogle -->
+							</div>
+						</div>
+						<!-- /ACCOUNT -->
+					</div>
+					<!-- row -->
+				</div>
+				<!-- container -->
+			</div>
+			<!-- /MAIN HEADER -->
+		</header>
+		<!-- /HEADER -->
+
+		<!-- NAVIGATION -->
+		<nav id="navigation">
+			<!-- container -->
+			<div class="container">
+				<!-- responsive-nav -->
+				<div id="responsive-nav">
+					<!-- NAV -->
+					<ul class="main-nav nav navbar-nav">
+						<li class="active"><a href="../">Главная</a></li>
+                        {% for category in categories %}
+                            <li><a href="/category/{{ category.slug }}">{{ category.name }}</a></li>
+                        {% endfor %}
+						<li><a href="{% url 'shop:contact' %}">Контакты</a></li>
+						<li><a href="../about">О Нас</a></li>
+					</ul>
+					<!-- /NAV -->
+				</div>
+				<!-- /responsive-nav -->
+			</div>
+			<!-- /container -->
+		</nav>
+		<!-- /NAVIGATION -->
+
+		<!-- BREADCRUMB -->
+		<div id="breadcrumb" class="section">
+			<!-- container -->
+			<div class="container">
+				<!-- row -->
+				<div class="row">
+					<div class="col-md-12">
+{#						<h3 class="breadcrumb-header">Regular Page</h3>#}
+						<ul class="breadcrumb-tree">
+							<li><a href="{% url 'shop:base' %}">Главная</a></li>
+                            {% block breadcrumb %}{% endblock %}
+{#							<li class="active">Blank</li>#}
+						</ul>
+					</div>
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /BREADCRUMB -->
+
+		<!-- SECTION -->
+		<div class="section">
+			<!-- container -->
+			<div class="container">
+                <div>{% block main %}Main{% endblock %}</div>
+{#				<!-- row -->#}
+{#				<div class="row">#}
+{#					<!-- shop -->#}
+{#					<div class="col-md-4 col-xs-6">#}
+{#						<div class="shop">#}
+{#							<div class="shop-img">#}
+{#								<img src="./img/shop01.png" alt="">#}
+{#							</div>#}
+{#							<div class="shop-body">#}
+{#								<h3>Laptop<br>Collection</h3>#}
+{#								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>#}
+{#							</div>#}
+{#						</div>#}
+{#					</div>#}
+{#					<!-- /shop -->#}
+{##}
+{#					<!-- shop -->#}
+{#					<div class="col-md-4 col-xs-6">#}
+{#						<div class="shop">#}
+{#							<div class="shop-img">#}
+{#								<img src="./img/shop03.png" alt="">#}
+{#							</div>#}
+{#							<div class="shop-body">#}
+{#								<h3>Accessories<br>Collection</h3>#}
+{#								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>#}
+{#							</div>#}
+{#						</div>#}
+{#					</div>#}
+{#					<!-- /shop -->#}
+{##}
+{#					<!-- shop -->#}
+{#					<div class="col-md-4 col-xs-6">#}
+{#						<div class="shop">#}
+{#							<div class="shop-img">#}
+{#								<img src="./img/shop02.png" alt="">#}
+{#							</div>#}
+{#							<div class="shop-body">#}
+{#								<h3>Cameras<br>Collection</h3>#}
+{#								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>#}
+{#							</div>#}
+{#						</div>#}
+{#					</div>#}
+{#					<!-- /shop -->#}
+{#				</div>#}
+{#				<!-- /row -->#}
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /SECTION -->
+
+		<!-- NEWSLETTER -->
+		<div id="newsletter" class="section">
+			<!-- container -->
+			<div class="container">
+				<!-- row -->
+				<div class="row">
+					<div class="col-md-12">
+						<div class="newsletter">
+							<p>Хотите получать информацию о наших скидках и акциях</p>
+							<form>
+								<input class="input" type="email" placeholder="Введите Ваш Email">
+								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Подписаться</button>
+							</form>
+							<ul class="newsletter-follow">
+								<li>
+									<a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+								</li>
+								<li>
+									<a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+								</li>
+								<li>
+									<a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+								</li>
+								<li>
+									<a href="https://www.pinterest.ru/"><i class="fa fa-pinterest"></i></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+        </div>
+        <!-- /NEWSLETTER -->
+
+            <!-- FOOTER -->
+		<footer id="footer">
+			<!-- top footer -->
+			<div class="section">
+				<!-- container -->
+				<div class="container">
+					<!-- row -->
+					<div class="row">
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title"> О Нас</h3>
+								<p>Наш магазин предлагает все необходимое для занятий большим теннисом.</p>
+								<ul class="footer-links">
+									<li><a href="#"><i class="fa fa-map-marker"></i>г. Москва, ул. Первого Мая, д.16</a></li>
+									<li><a href="#"><i class="fa fa-phone"></i>+7 (999) 765-43-21</a></li>
+									<li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+								</ul>
+							</div>
+						</div>
+
+                        <div class="col-md-3 col-xs-6">
+                            <div class="footer">
+                                <h3 class="footer-title">Categories</h3>
+                                <ul class="footer-links">
+                                    {% for category in categories %}
+                                        <li><a href="/category/{{ category.slug }}">{{ category.name }}</a></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+
+						<div class="clearfix visible-xs"></div>
+
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Information</h3>
+								<ul class="footer-links">
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Contact Us</a></li>
+									<li><a href="#">Privacy Policy</a></li>
+									<li><a href="#">Orders and Returns</a></li>
+									<li><a href="#">Terms & Conditions</a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Service</h3>
+								<ul class="footer-links">
+									<li><a href="#">My Account</a></li>
+									<li><a href="#">View Cart</a></li>
+									<li><a href="#">Wishlist</a></li>
+									<li><a href="#">Track My Order</a></li>
+									<li><a href="#">Help</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<!-- /row -->
+				</div>
+				<!-- /container -->
+			</div>
+			<!-- /top footer -->
+
+		</footer>
+		<!-- /FOOTER -->
+
+		<!-- jQuery Plugins -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/bootstrap.min.js' %}"></script>
+		<script src="{% static 'js/slick.min.js' %}"></script>
+		<script src="{% static 'js/nouislider.min.js' %}"></script>
+		<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+
+	</body>
 </html>
