--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    <title>Контакты</title>
+    <title>О Нас</title>
 {% endblock %}
 
 {% block cart %}
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'shop:contact' %}">Контакты</a></li>
+    <li><a href="{% url 'shop:about' %}">О Нас</a></li>
 {% endblock %}
 
 {% block main %}
-    <h2>Контакты</h2>
+    <h2>О Нас</h2>
 {% endblock %}
 
 {% block sidebar %}
