--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
 
 {% block title %}
+    <title>{{ category.name }}</title>
+{% endblock %}
 
+{% block cart %}
+    <div class="qty">{{ cart.item.count }}</div>
+{% endblock %}
+
+{% block breadcrumb %}
+    <li><a href="../category/{{ category.slug }}">{{ category.name }}</a></li>
 {% endblock %}
 
 {% block main %}
