--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-
+    <title>{{ product.brand }} {{ product.title }}</title>
 {% endblock %}
 
 {% block cart %}
