--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
 							<div class="header-ctn">
 								<!-- Cart -->
 								<div>
-									<a href="#">
+									<a href="{% url 'shop:cart' %}">
 										<i class="fa fa-shopping-cart"></i>
 										<span>Корзина</span>
 {#										{% block cart %}0{% endblock %}#}
