--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -11,7 +11,7 @@
             <tr>
                 <th scope="col"></th>
                 <th scope="col">Товар</th>
-                <th scope="col"">Количество</th>
+                <th scope="col">Количество</th>
                 <th scope="col" class="text-center">Цена</th>
             </tr>
             </thead>
