--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -51,7 +51,7 @@
             </tfoot>
         </table>
         </table>
-        <a href='{% url 'shop:checkout' %}'><button type="button" class="btn btn-success">Сделать заказ</button></a>
+        <a href='{% url 'shop:create_order' %}'><button type="button" class="btn btn-success">Сделать заказ</button></a>
     {% else %}
         <h3>Ваша корзина пуста</h3>
     {% endif %}
